objects/ASI_CRM_Promotion_Plan__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_ActualIncentiveValue_OtherinKind__c</fullName>
        <label>Actual Incentive Value (Other in Kind)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Actual_Incentive_Value_Cash__c</fullName>
        <label>Actual Incentive Value (Cash)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Actual_Incentive_Value_FOC__c</fullName>
        <label>Actual Incentive Value (FOC)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Actual_Incentive_Value_Voucher__c</fullName>
        <label>Actual Incentive Value (Voucher)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Actual_Incentive_Value__c</fullName>
        <label>Actual Incentive Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Actual_Incentive_Volume_9L__c</fullName>
        <label>Actual Incentive Volume (9L)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Actual_Value__c</fullName>
        <label>Actual Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Actual_Volume_9L__c</fullName>
        <label>Actual Volume (9L)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Approval_Cut_off_Date__c</fullName>
        <inlineHelpText>Only outlets / wholesalers approved before this date for participation can be entitled to this promotion.</inlineHelpText>
        <label>Approval Cut-off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CommittedIncentiveValue_OIK__c</fullName>
        <label>Committed Incentive Value(Other in Kind)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CommittedIncentiveValue_Voucher__c</fullName>
        <label>Committed Incentive Value (Voucher)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Committed_Incentive_Value_Cash__c</fullName>
        <label>Committed Incentive Value (Cash)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Committed_Incentive_Value_FOC__c</fullName>
        <label>Committed Incentive Value (FOC)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Committed_Incentive_Value__c</fullName>
        <label>Committed Incentive Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Committed_Incentive_Volume_9L__c</fullName>
        <label>Committed Incentive Volume (9L)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Committed_Target_Value__c</fullName>
        <label>Committed Target Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Committed_Target_Volume_9L__c</fullName>
        <label>Committed Target Volume (9L)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Enrollment_Cut_off_Date__c</fullName>
        <inlineHelpText>Sales must enroll outlets / wholesalers before this date.</inlineHelpText>
        <label>Enrollment Cut-off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Promotion_Period_Month__c</fullName>
        <formula>((YEAR(ASI_CRM_End_Date__c ) - YEAR(ASI_CRM_Start_Date__c ) ) *12) + (MONTH(ASI_CRM_End_Date__c )) - (MONTH(ASI_CRM_Start_Date__c )) 


+((DAY(ASI_CRM_End_Date__c)-DAY(ASI_CRM_Start_Date__c) +1)/CASE ( MONTH(ASI_CRM_End_Date__c ) ,1,31,2, 

IF(OR(MOD( YEAR(ASI_CRM_End_Date__c ) ,400)=0,AND(MOD(YEAR(ASI_CRM_End_Date__c ),4)=0,MOD(YEAR(ASI_CRM_End_Date__c ),100)&lt;&gt;0)),29,28) 

,3,31,5,31,7,31,8,31,10,31,12,31,30))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promotion Period (Month)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SYS_Allow_Submit_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SYS Allow Submit Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SYS_Send_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SYS Send Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Final Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_TotalIncentiveValue_OtherInKind__c</fullName>
        <label>Total Incentive Value (Other in Kind)</label>
        <summarizedField>ASI_CRM_Promotion_Mechanic__c.ASI_CRM_Incentive_Value_Other_in_Kind__c</summarizedField>
        <summaryForeignKey>ASI_CRM_Promotion_Mechanic__c.ASI_CRM_Promotion_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Actual_ROI__c</fullName>
        <formula>if(ASI_CRM_Actual_Value__c = 0, 0,
  1 - ( ASI_CRM_Actual_Incentive_Value__c / ASI_CRM_Actual_Value__c )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Actual ROI%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Committed_ROI_Percent__c</fullName>
        <formula>IF(ASI_CRM_Committed_Target_Value__c = 0, 0,
  1 - ( ASI_CRM_Committed_Incentive_Value__c / ASI_CRM_Committed_Target_Value__c )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Committed ROI%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Incentive_Value_Cash__c</fullName>
        <label>Total Incentive Value (Cash)</label>
        <summarizedField>ASI_CRM_Promotion_Mechanic__c.ASI_CRM_Incentive_Value_Cash__c</summarizedField>
        <summaryForeignKey>ASI_CRM_Promotion_Mechanic__c.ASI_CRM_Promotion_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Incentive_Value_FOC__c</fullName>
        <label>Total Incentive Value (FOC)</label>
        <summarizedField>ASI_CRM_Promotion_Mechanic__c.ASI_CRM_Incentive_Value_FOC__c</summarizedField>
        <summaryForeignKey>ASI_CRM_Promotion_Mechanic__c.ASI_CRM_Promotion_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Incentive_Value_Formula__c</fullName>
        <formula>ASI_CRM_Total_Incentive_Value_Cash__c + ASI_CRM_Total_Incentive_Value_FOC__c + ASI_CRM_TotalIncentiveValue_OtherInKind__c + ASI_CRM_Total_Incentive_Value_Voucher__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Incentive Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Incentive_Value_Voucher__c</fullName>
        <label>Total Incentive Value (Voucher)</label>
        <summarizedField>ASI_CRM_Promotion_Mechanic__c.ASI_CRM_Incentive_Value_Voucher__c</summarizedField>
        <summaryForeignKey>ASI_CRM_Promotion_Mechanic__c.ASI_CRM_Promotion_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Incentive_Volume_9L_Rollup__c</fullName>
        <label>Total Incentive Volume (9L)</label>
        <summarizedField>ASI_CRM_Promotion_Mechanic__c.ASI_CRM_Incentive_Volume_9L__c</summarizedField>
        <summaryForeignKey>ASI_CRM_Promotion_Mechanic__c.ASI_CRM_Promotion_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Number_of_Customer__c</fullName>
        <formula>ASI_CRM_Total_Number_of_PromotionDetails__c / ASI_CRM_Total_Number_of_Mechanics__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Number of Customer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Number_of_Mechanics__c</fullName>
        <label>Total Number of Mechanics</label>
        <summaryForeignKey>ASI_CRM_Promotion_Mechanic__c.ASI_CRM_Promotion_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Number_of_PromotionDetails__c</fullName>
        <label>Total Number of Promotion Details</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Target_ROI_Percent__c</fullName>
        <formula>if(ASI_CRM_Total_Target_Value_Rollup__c = 0, 0,
  1 - (ASI_CRM_Total_Incentive_Value_Formula__c / ASI_CRM_Total_Target_Value_Rollup__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Target ROI%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Target_Value_Rollup__c</fullName>
        <label>Total Target Value</label>
        <summarizedField>ASI_CRM_Promotion_Mechanic__c.ASI_CRM_Target_Value__c</summarizedField>
        <summaryForeignKey>ASI_CRM_Promotion_Mechanic__c.ASI_CRM_Promotion_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Target_Volume_9L_Rollup__c</fullName>
        <label>Total Target Volume (9L)</label>
        <summarizedField>ASI_CRM_Promotion_Mechanic__c.ASI_CRM_Target_Volume_9L__c</summarizedField>
        <summaryForeignKey>ASI_CRM_Promotion_Mechanic__c.ASI_CRM_Promotion_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Promotion Plan</label>
    <listViews>
        <fullName>ASI_CRM_SG_Outlet_Promotion_Plan</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>ASI_CRM_Start_Date__c</columns>
        <columns>ASI_CRM_End_Date__c</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>ASI_CRM_Enrollment_Cut_off_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Promotion_Plan__c.ASI_CRM_SG_Outlet_Promotion_Plan,ASI_CRM_Promotion_Plan__c.ASI_CRM_SG_Outlet_Promotion_Plan_Read_Only</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Promotion_Plan__c.ASI_CRM_SG_Outlet_Promotion_Plan_Final_Approved</value>
        </filters>
        <label>SG Outlet Promotion Plan</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_SG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_SG_Wholesaler_Promotion_Plan</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>ASI_CRM_Start_Date__c</columns>
        <columns>ASI_CRM_End_Date__c</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>ASI_CRM_Enrollment_Cut_off_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Promotion_Plan__c.ASI_CRM_SG_Wholesaler_Promotion_Plan,ASI_CRM_Promotion_Plan__c.ASI_CRM_SG_Wholesaler_Promotion_Plan_Read_Only</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Promotion_Plan__c.ASI_CRM_SG_Wholesaler_Promotion_Plan_Final_Approved</value>
        </filters>
        <label>SG Wholesaler Promotion Plan</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_SG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Promotion Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promotion Plans</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_SG_Outlet_Promotion_Plan</fullName>
        <active>true</active>
        <label>SG Outlet Promotion Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_Outlet_Promotion_Plan_Final_Approved</fullName>
        <active>true</active>
        <label>SG Outlet Promotion Plan (Final Approved)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_Outlet_Promotion_Plan_Read_Only</fullName>
        <active>true</active>
        <label>SG Outlet Promotion Plan (Read-Only)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_Wholesaler_Promotion_Plan</fullName>
        <active>true</active>
        <label>SG Wholesaler Promotion Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_Wholesaler_Promotion_Plan_Final_Approved</fullName>
        <active>true</active>
        <label>SG Wholesaler Promotion Plan (Final Approved)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_Wholesaler_Promotion_Plan_Read_Only</fullName>
        <active>true</active>
        <label>SG Wholesaler Promotion Plan (Read-Only)</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>ASI_CRM_SG_Promotion__c</fullName>
        <label>ASI_CRM_SG_Promotion</label>
    </sharingReasons>
    <validationRules>
        <fullName>ASI_CRM_SG_CheckEndDate</fullName>
        <active>true</active>
        <description>End date should be equal to last day of a month</description>
        <errorConditionFormula>AND(
    CONTAINS(RecordType.DeveloperName, &apos;ASI_CRM_SG&apos;),
    ASI_CRM_End_Date__c != ( 
      IF( 
        MONTH( ASI_CRM_End_Date__c ) = 12,
        DATE( YEAR( ASI_CRM_End_Date__c ) + 1, 1, 1 ),
        DATE( YEAR( ASI_CRM_End_Date__c ), MONTH( ASI_CRM_End_Date__c ) + 1, 1 )
      ) - 1 
    )
)</errorConditionFormula>
        <errorDisplayField>ASI_CRM_End_Date__c</errorDisplayField>
        <errorMessage>Please select last day of a month as End Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_SG_CheckEnrollmentDate</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
CONTAINS(RecordType.DeveloperName, &apos;ASI_CRM_SG&apos;), 
 ASI_CRM_Enrollment_Cut_off_Date__c &lt; TODAY(),
OR(ISNEW(), ISCHANGED(ASI_CRM_Enrollment_Cut_off_Date__c ) )
)</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Enrollment_Cut_off_Date__c</errorDisplayField>
        <errorMessage>Enrollment Cuf-off Date should be later or equal to today.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_SG_CheckStartDate</fullName>
        <active>true</active>
        <description>Start date should be equal to first day of a month</description>
        <errorConditionFormula>AND(
    CONTAINS(RecordType.DeveloperName, &apos;ASI_CRM_SG&apos;),
    DAY(ASI_CRM_Start_Date__c) != 1
)</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Start_Date__c</errorDisplayField>
        <errorMessage>Please select first day of a month as Start Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_SG_CheckStartEndDate</fullName>
        <active>true</active>
        <description>Start Date should be earlier than End Date.</description>
        <errorConditionFormula>AND(
    CONTAINS(RecordType.DeveloperName, &apos;ASI_CRM_SG&apos;),
    ASI_CRM_Start_Date__c &gt; ASI_CRM_End_Date__c
)</errorConditionFormula>
        <errorDisplayField>ASI_CRM_End_Date__c</errorDisplayField>
        <errorMessage>Please enter a End Date which is later than Start Date.</errorMessage>
    </validationRules>
</CustomObject>